# protoglot

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh  release.sh
.github/workflows/: merge-and-pr-build.yml
.mise/: config.toml
config/: appnames.txt  default.json5  hostnames.txt
src/: config.rs  emitter.rs  event.rs  main.rs  sender.rs
src/absorber/: absorber.rs  certs.rs  http.rs  integration_tests.rs  mod.rs  stats_svc.rs  tcp.rs  udp.rs
src/config/: absorber.rs  cli.rs  config.rs  emitter.rs  mod.rs  types.rs
src/generators/: event.rs  event_generator.rs  mod.rs  nd_json.rs  random_strings.rs  splunk_hec.rs  syslog.rs  syslog3164.rs  syslog5424.rs
src/serializers/: mod.rs  ndjson.rs
src/transports/: http.rs  mod.rs  tcp.rs  tcp_tls.rs  udp.rs
