[package]
name = "protoglot"
version = "0.2.1"
authors = ["Anson VanDoren <anson@ansonvandoren.com>"]
edition = "2021"
description = "A data generator & load tool, mostly built for testing Cribl Stream\nSet RUST_LOG=[error|warn|info|debug|trace] to see more output."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
env_logger = { version = "0.11.8", features = ["unstable-kv"] }
human_bytes = "0.4.3"
json5 = "0.4.1"
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
proptest = "1.6.0"
rand = "0.9.1"
rustls = "0.23.26"
rustls-native-certs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.2.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
uuid = { version = "1.16.0", features = ["v4"] }
webpki-roots = "0.26.8"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
sealed_test = "1.1.0"
