[package]
name = "protoglot"
version = "0.3.0"
authors = ["Anson VanDoren <anson@ansonvandoren.com>"]
edition = "2021"
description = "A data generator & load tool, mostly built for testing Cribl Stream\nSet RUST_LOG=[error|warn|info|debug|trace] to see more output."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
async-compression = { version = "0.4.28", features = ["gzip", "tokio"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.46", features = ["derive"] }
directories = "6.0.0"
env_logger = { version = "0.11.8", features = ["unstable-kv"] }
flate2 = "1.1.2"
http-body-util = "0.1.3"
human_bytes = "0.4.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
rcgen = "0.13.2"
reqwest = { version = "0.12.23", default-features = false, features = [
  "http2",
  "rustls-tls",
] }
rustls = "0.23.31"
rustls-native-certs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.2.1"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = "0.7.16"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
sealed_test = "1.1.0"
